# scim-tables

./: .gitignore  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac  scim-tables.spec.in
icons/: Makefile.am
po/: LINGUAS  Makevars  de.po  fr.po  it.po  ja.po  ko.po  nl.po  pa.po  zh_CN.po  zh_TW.po
skim/: AUTHORS  bootstrap  configure.in.in
src/: Makefile.am  scim_generic_table.cpp  scim_generic_table.h  scim_make_table.cpp  scim_table_imengine_setup.cpp
tables/: Makefile.am  Makefile.in
tables/additional/: LaTeX.txt.in  Makefile.am  Makefile.in
tables/am/: Makefile.am  Makefile.in
tables/ar/: Makefile.am  Makefile.in
tables/bn/: Makefile.am  Makefile.in
tables/gr/: Makefile.am  Makefile.in
tables/gu/: Makefile.am  Makefile.in
tables/he/: HebrewComputer.txt.in  Makefile.am  Makefile.in
tables/hi/: Hindi-inscript.txt.in  Makefile.am  Makefile.in
tables/id/: Bali.txt.in  Batak.txt.in  Javanese.txt.in  Lontara.txt.in  Makefile.am  Rejang.txt.in  Sundanese.txt.in
tables/ja/: Makefile.am  Makefile.in
tables/kn/: Makefile.am  Makefile.in
tables/ko/: Makefile.am  Makefile.in
tables/ml/: Makefile.am  Makefile.in  Malayalam-inscript.txt.in
tables/mr/: Makefile.am  Makefile.in
tables/ne/: Makefile.am  Makefile.in
tables/pa/: Makefile.am  Makefile.in
tables/ru/: Makefile.am  Makefile.in  RussianComputer.txt.in  Yawerty.txt.in
tables/ta/: Makefile.am  Makefile.in
tables/te/: Makefile.am  Makefile.in
tables/th/: Makefile.am  Makefile.in
tables/ug/: Makefile.am  Makefile.in
tables/uk/: Makefile.am  Makefile.in
tables/vi/: Makefile.am  Makefile.in
tables/zh/: Cantonese.txt.in  Makefile.am  Makefile.in  SmartCangJie6.txt.in  ZhuYin-Big.txt.in  ZhuYin.txt.in
